# AI-trading-team

./: .env.example  .gitignore  CLAUDE.md  COWORK_ARTIFACT_SETUP.md  README.md  create a link.md  pyproject.toml  trading_eod_dashboard.html
.claude/: settings.json  settings.local.json
.obsidian/: graph.json
agents/: README.md  book_monitor.md  cio.md  compliance.md  diamond_hunter.md  edge_hunter.md  execution_trader.md  flow_analyst.md  fund_engineer.md  macro_strategist.md  options_risk.md  portfolio_manager.md  quant_researcher.md  red_team.md  research.md  risk_manager.md  volatility_strategist.md
config/: account_stage.yaml  agent_performance.yaml  economic_overrides.yaml  equities.yaml  exit_reasoner.yaml  focus_universe.yaml  fund.yaml  models.yaml  news_sources.yaml  risk_limits.yaml  symbols.yaml  topstep.yaml
deploy/: README.md
hooks/: __init__.py  audit_logger.py  cost_tracker.py  risk_gate.py
logs/: topstep_orders_5_13_to_5_14.json  topstep_orders_week.json
runtime/: __init__.py  events.py  main.py  orchestrator.py  scheduler.py
scripts/: README.md  _build_more_trades.py  _connect_topstep_probe.py  _cost_summary.py  _decide_borderline_trade.py  _direct_proposal_test.py  _dll_postmortem.py  _dry_run_workflow.py  _final_index_macro_wake.py  _first_wake.py  _inject_fx_thesis_and_run.py  _inject_m6b_thesis_and_run.py  _inject_zn_thesis.py  _probe_contracts.py  _qr_long_only_chain.py  _qr_plus_edge_parallel.py  _run_chain_validation.py  _run_until_trade.py  _session_brief.py  _wake_cio_midday.py  _wake_hft_quant.py  _zn_resubmit_at_reopen.py  (+137 more)
(+537 files in other folders)
