[project]
name = "ai-trading-fund"
version = "0.1.0"
description = "Autonomous multi-agent Topstep futures trading fund built on the Claude Agent SDK"
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    "claude-agent-sdk>=0.1.0",
    "anthropic>=0.40.0",
    "pydantic>=2.8.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "aiosqlite>=0.20.0",
    "tenacity>=8.5.0",
    # tzdata is required on Windows for `zoneinfo` to resolve IANA zones like
    # "America/Chicago" (used by the CME session scheduler). No-op on Linux.
    'tzdata; platform_system == "Windows"',
]

[project.optional-dependencies]
dev = ["ruff>=0.6.0", "pytest>=8.0.0", "pytest-asyncio>=0.24.0"]

[project.scripts]
fund = "runtime.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Only these directories are Python packages. The rest (vault/, config/,
# deploy/, logs/, scripts/, agents/) are data or prompts — not Python code.
packages = ["hooks", "state", "tools", "runtime"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
